[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/ui/BTN PLAY.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/BTN SETTINGS.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/Button BG shadow.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/GAME LOGO.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scripts/Home.gd" type="Script" id=6]
[ext_resource path="res://assets/ui/BTN Exit.png" type="Texture" id=7]
[ext_resource path="res://scenes/MoneyPanel.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/AdMob.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[node name="Home" type="Panel"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.629944
margin_top = 0.629974
margin_right = 0.629944
margin_bottom = 0.629974
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="."]
margin_left = 170.947
margin_top = 50.5366
margin_right = 470.947
margin_bottom = 141.537
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetButton" type="Button" parent="."]
margin_left = 14.6084
margin_top = 438.921
margin_right = 92.6084
margin_bottom = 471.921
text = "RESET"
icon = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyPanel" parent="." instance=ExtResource( 8 )]

[node name="AdMob" parent="." instance=ExtResource( 9 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -293.0
margin_right = 100.0
margin_bottom = -90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="TextureButton" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 48.0
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EquipmentButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 200.0
margin_bottom = 100.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/EquipmentButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.662745, 0.490196, 0.164706, 1 )
text = "EQUIPMENT	"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 200.0
margin_bottom = 152.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/ShopButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.662745, 0.490196, 0.164706, 1 )
text = "SHOP"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 156.0
margin_right = 200.0
margin_bottom = 203.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 207.0
margin_right = 200.0
margin_bottom = 255.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/ExitButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.227451, 0, 1 )
text = "EXIT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="banner_loaded" from="AdMob" to="." method="_on_AdMob_banner_loaded"]
[connection signal="ready" from="AdMob" to="." method="_on_AdMob_ready"]
[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/EquipmentButton" to="." method="_on_EquipmentButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ShopButton" to="." method="_on_ShopButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
